--- a/data.qmd
+++ b/data.qmd
@@ -1,1 +1,89 @@
+Here you can find datasets used throughout the course. I recommend downloading the data in RDS format, since it contains metadata like ordering of ordinal variables. Click on the name to expand.
 
+<details>
+
+<summary class="item">
+
+**Countries**
+
+</summary>
+
+Small datasets on various economic and social indicators of European countries.
+
+You can download the dataset using:
+
+```{r}
+#| eval: false
+
+countries <- readr::read_rds("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.rds")
+#OR
+countries <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.csv")
+
+```
+
+Alternatively, you can download the data from GitHubt in [rds](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.rds) or [csv](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.csv) formats.
+
+| Variable        | Label                                                             | Source                |
+|:----------------|:------------------------------------------------------------------|:----------------------|
+| country         | Country name                                                      |                       |
+| code            | Two digit coutry code                                             |                       |
+| gdp             | GDP in the milions of EUR (2018)                                  | Eurostat              |
+| population      | Country population on the 1.1.2018                                | Eurostat              |
+| area            | Area of the country                                               | CIA factbook          |
+| eu_member       | Is the country a EU member? (2019)                                | European Union        |
+| postsoviet      | Was the country a member of the Eastern block                     | Wikipedia             |
+| life_exp        | Life expectancy at birth (2017)                                   | UN                    |
+| uni_prc         | \% of people with university education between 15-64 years (2018) | Eurostat              |
+| poverty_risk    | \% of people in risk of poverty (2017)                            | Eurostat              |
+| material_dep    | \% of people in material deprivation, 3 or less items (2017)      | Eurostat              |
+| hdi             | Human development index (2018)                                    | UN                    |
+| foundation_date | Date of founding                                                  | Wikipedia             |
+| maj_belief      | Biggest religious group (2018)                                    | Pew Researcher Center |
+
+</details>
+
+<details>
+
+<summary class="item">
+
+**United Nations**
+
+</summary>
+
+This is United Nations country level data from 1998, originally used by John Fox in his book [Applied Regression Analysis and Generalized Linear Models](https://socialsciences.mcmaster.ca/jfox/Books/Applied-Regression-3E/index.html).
+
+```{r}
+#| eval: false
+
+un <- readr::read_rds("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/united-nations.rds")
+#OR
+un <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/united-nations.csv")
+```
+
+The original data can be downloaded in .txt format [here](https://raw.githubusercontent.com/Sociology-FA-CU/appliedregressioninr/main/data/UnitedNations.txt) (right click and choose *Save link as…*). The description of the data [here](https://socialsciences.mcmaster.ca/jfox/Books/Applied-Regression-3E/datasets/UnitedNations.pdf).
+
+</details>
+
+<details>
+
+<summary class="item">
+
+**Czech Voter Turnout 2017**
+
+</summary>
+
+Aggregated data on the voter turnout by age in the Czech 2017 parliamentary elections from the 8th round of the European Social Survey.
+
+You can download the dataset using:
+
+```{r}
+#| eval: false
+
+turnout <- readr::read_rds("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.rds")
+#OR
+turnout <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.csv")
+```
+
+Or you can download the data either in [rds](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.rds) or [csv](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.csv) format.
+
+</details>
