--- a/data.qmd
+++ b/data.qmd
@@ -24,7 +24,7 @@ countries <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/r
 Alternatively, you can download the data from GitHubt in [rds](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.rds) or [csv](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.csv) formats.
 
 | Variable        | Label                                                             | Source                |
-|:----------------|:------------------------------------------------------------------|:----------------------|
+|:---------------|:----------------------------------------|:---------------|
 | country         | Country name                                                      |                       |
 | code            | Two digit coutry code                                             |                       |
 | gdp             | GDP in the milions of EUR (2018)                                  | Eurostat              |
@@ -85,5 +85,24 @@ turnout <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw
 ```
 
 Or you can download the data either in [rds](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.rds) or [csv](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/vote-2017-parliament.csv) format.
+
+</details>
+
+<details>
+
+<summary class="item">
+
+**Teachers Beauty and Ratings (**Hamermesh & Parker 2005)
+
+</summary>
+
+The data are gathered from end of semester student evaluations for 463 courses taught by a sample of 94 professors from the University of Texas at Austin. In addition, six students rate the professors' physical appearance. Originally published in [Hamermesh & Parker (2005)](https://fairmodel.econ.yale.edu/ec438/ham1.pdf).
+
+```{r}
+#| eval: false
+
+teachers <- readr::read_csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/teacher-ratings.csv")
+
+```
 
 </details>
