--- a/final-homework.qmd
+++ b/final-homework.qmd
@@ -16,7 +16,7 @@ The data can be downloaded using the following code:
 
 ```         
 polls =  read.csv("https://raw.githubusercontent.com/fivethirtyeight/data/master/pollster-ratings/raw_polls.csv")
-polls =  subset(polls, methodology ==  c("IVR", "Live Phone", "Online"))
+polls =  subset(polls, methodology %in% c("IVR", "Live Phone", "Online Panel"))
 ```
 
 (To make our job easier, we will only work with three types of methodology. For a small, inconsequential bonus, you can look into the full data set and think about why I selected only these three.)
