--- a/literature.qmd
+++ b/literature.qmd
@@ -1,3 +1,7 @@
+### Cheat sheet
+
+You can download cheat sheet with most important functions here.
+
 ### **Primary literature**
 
 -   Gelman, A., Hill, J., & Vehtari, A. (2020). Regression and Other Stories. Cambridge University Press. <https://doi.org/10.1017/9781139161879>
