--- a/data.qmd
+++ b/data.qmd
@@ -23,22 +23,22 @@ countries <- read.csv("https://github.com/Sociology-FA-CU/applied-regression-r/r
 
 Alternatively, you can download the data from GitHubt in [rds](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.rds) or [csv](https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/countries.csv) formats.
 
-| Variable        | Label                                                             | Source                |
-|:----------------|:------------------------------------------------------------------|:----------------------|
-| country         | Country name                                                      |                       |
-| code            | Two digit coutry code                                             |                       |
-| gdp             | GDP in the milions of EUR (2018)                                  | Eurostat              |
-| population      | Country population on the 1.1.2018                                | Eurostat              |
-| area            | Area of the country                                               | CIA factbook          |
-| eu_member       | Is the country a EU member? (2019)                                | European Union        |
-| postsoviet      | Was the country a member of the Eastern block                     | Wikipedia             |
-| life_exp        | Life expectancy at birth (2017)                                   | UN                    |
-| uni_prc         | \% of people with university education between 15-64 years (2018) | Eurostat              |
-| poverty_risk    | \% of people in risk of poverty (2017)                            | Eurostat              |
-| material_dep    | \% of people in material deprivation, 3 or less items (2017)      | Eurostat              |
-| hdi             | Human development index (2018)                                    | UN                    |
-| foundation_date | Date of founding                                                  | Wikipedia             |
-| maj_belief      | Biggest religious group (2018)                                    | Pew Researcher Center |
+| Variable | Label | Source |
+|:---------------|:----------------------------------------|:---------------|
+| country | Country name |  |
+| code | Two digit coutry code |  |
+| gdp | GDP in the milions of EUR (2018) | Eurostat |
+| population | Country population on the 1.1.2018 | Eurostat |
+| area | Area of the country | CIA factbook |
+| eu_member | Is the country a EU member? (2019) | European Union |
+| postsoviet | Was the country a member of the Eastern block | Wikipedia |
+| life_exp | Life expectancy at birth (2017) | UN |
+| uni_prc | \% of people with university education between 15-64 years (2018) | Eurostat |
+| poverty_risk | \% of people in risk of poverty (2017) | Eurostat |
+| material_dep | \% of people in material deprivation, 3 or less items (2017) | Eurostat |
+| hdi | Human development index (2018) | UN |
+| foundation_date | Date of founding | Wikipedia |
+| maj_belief | Biggest religious group (2018) | Pew Researcher Center |
 
 </details>
 
@@ -101,7 +101,7 @@ The data are gathered from end of semester student evaluations for 463 courses t
 ```{r}
 #| eval: false
 
-teachers <- readr::read_csv("https://github.com/Sociology-FA-CU/applied-regression-r/raw/main/data/teacher-ratings.csv")
+teachers <- readr::read_csv("https://vincentarelbundock.github.io/Rdatasets/csv/openintro/evals.csv")
 
 ```
 
